fixed grid gap in editor

--- a/src/gutenberg/blocks/grid/styles/editor.scss
+++ b/src/gutenberg/blocks/grid/styles/editor.scss
@@ -29,7 +29,7 @@
             margin-bottom: calc(-1 * var(--gkt-grid__gap));
             margin-left: calc(-1 * var(--gkt-grid__gap));
 
-            > div {
+            > div.wp-block {
                 margin-bottom: var(--gkt-grid__gap);
                 margin-left: var(--gkt-grid__gap);
             }
